<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4sp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="8sp">

        <TextView
            android:id="@+id/sl_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"
            android:text="@string/sl_no"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_weight="2"
            android:text="@string/name"/>


        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/date_text"/>

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/amount"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/colorAccent"
        tools:ignore="SmallSp"/>


</LinearLayout>