<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginHorizontal="8sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8sp">

        <TextView
            android:id="@+id/sl_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:text="@string/sl_no"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/colorAccent"
            android:layout_weight="2"
            android:textSize="16sp"
            android:textAlignment="center"
            android:text="@string/date_text"/>

        <TextView
            android:id="@+id/amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/amount"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginVertical="4sp"
        android:background="@color/colorAccent"/>

</LinearLayout>