<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editfees.EditFees"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_view_background_gradient"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Fees"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:padding="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16sp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monthly"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/monthly_fees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quarterly"
            android:textStyle="bold"
            android:layout_marginTop="16sp"
            android:textSize="20sp"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/quarterly_fees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:inputType="number"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/half_yearly"
            android:textStyle="bold"
            android:textSize="20sp"

            android:layout_marginTop="16sp"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/half_yearly_fees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:inputType="number"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/annual"
            android:layout_marginTop="16sp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/annual_fees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:inputType="number" />


        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save Changes"
            android:background="@drawable/button_background"
            android:layout_gravity="end"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="16sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"/>


    </LinearLayout>



</LinearLayout>